--- a/templates/main.html
+++ b/templates/main.html
@@ -19,56 +19,56 @@
     <fieldset>
         <legend>Введите значения для предсказания</legend>
         Соотношение матрица-наполнитель
-        <input name = 'matr' type="number"
+        <input name = 'matr' type="number" step="0.001"
         required>
         <br>
         Плотность, кг/м3
-        <input name = 'plotn' type="number"
+        <input name = 'plotn' type="number" step="0.001"
         <br>
         <br>
         <br>
         модуль упругости, Гпа
-        <input name = 'upr' type="number"
+        <input name = 'upr' type="number" step="0.001"
         <br>
         <br>
         <br>
         Количество отвердителя, м.%
-        <input name = 'otv' type="number"
+        <input name = 'otv' type="number" step="0.001"
         <br>
         <br>
         <br>
         Содержание эпоксидных групп, %_2
-        <input name = 'epox' type="number"
+        <input name = 'epox' type="number" step="0.001"
         <br>
         <br>
         <br>
         Температура вспышки, С_2
-        <input name = 'temp' type="number"
+        <input name = 'temp' type="number" step="0.001"
         <br>
         <br>
         <br>
         Поверхностная плотность, г/м2
-        <input name = 'p_plot' type="number"
+        <input name = 'p_plot' type="number" step="0.001"
         <br>
         <br>
         <br>
         Потребление смолы, г/м2
-        <input name = 'smol' type="number"
+        <input name = 'smol' type="number" step="0.001"
         <br>
         <br>
         <br>
         Угол нашивки, град
-        <input name = 'grad' type="number"
+        <input name = 'grad' type="number" step="0.001"
         <br>
         <br>
         <br>
         Шаг нашивки
-        <input name = 'shag' type="number"
+        <input name = 'shag' type="number" step="0.001"
         <br>
         <br>
         <br>
         Плотность нашивки
-        <input name = 'p_nash' type="number"
+        <input name = 'p_nash' type="number" step="0.001"
         <br>
         <br>
         <input type = "submit">
@@ -76,11 +76,9 @@
 </form>
 
 <div class = "result" align="center">
-    {% if result %}
         <br>
         <p style="font-size:50px">
             Прогноз свойства
         </p>
         <p style="font-size:50px"> {{result}}</p>
-    {% endif %}
 </div>
