добавлены названия вычислений

--- a/templates/main.html
+++ b/templates/main.html
@@ -80,5 +80,6 @@
         <p style="font-size:50px">
             Прогноз свойства
         </p>
-        <p style="font-size:50px"> {{result}}</p>
+        <p style="font-size:50px"> Модуль упругости при растяжении, ГПа {{modul}}</p>
+        <p style="font-size:50px"> Прочность при растяжении, МПа {{proch}}</p>
 </div>
